--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
